[package]
name = "maze"
version = "0.1.0"
authors = ["Ta Thanh Dinh <tathanhdinh@gmail.com>"]

[dependencies]
nix = "*"
# rand = "*"
lazy_static = "*"
petgraph = "*"
winapi = "*"
kernel32-sys = "*"
# nadeko = { git = "https://github.com/klutzy/nadeko.git", version = "*" }
# lazy = { git = "https://github.com/reem/rust-lazy.git", version = "*"}
# lazy-init = "*"

[profile.release]
lto = true
panic = 'abort'
# relocation-model = pic
# opt-level = '3'
# code-model = 'small'